Added Mnenomic Fragment and added Bip39Wallet creation logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
 
     <string name="enter_wallet_password">Enter Wallet Password</string>
     <string name="enter_account_name">Enter Account Name</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="imp_secret_phrase_msg">This is your secret recovery phrase. Write is down on a piece of paper and keep it in the safe place. You will be prompted to enter this phrase again (in the correct order) in the next step.</string>
 </resources>
